--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,13 @@
-asgiref==3.5.2
-Django==4.1
-sqlparse==0.4.2
+Package             Version
+------------------- ---------
+asgiref             3.4.1
+certifi             2022.6.15
+Django              3.2.5
+djangorestframework 3.13.1
+pip                 22.1.2
+psycopg2            2.8.6
+pytz                2022.1
+setuptools          61.2.0
+sqlparse            0.4.1
+typing_extensions   4.3.0
+wheel               0.37.1
