--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.5.2
 certifi @ file:///opt/conda/conda-bld/certifi_1655968806487/work/certifi
 Django==4.1
 djangorestframework==3.13.1
+gunicorn==20.1.0
 psycopg2 @ file:///home/builder/ci_310/psycopg2_1640792656405/work
 Pygments==2.12.0
 pytz @ file:///opt/conda/conda-bld/pytz_1654762638606/work
